--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -22,6 +22,7 @@ nav{
         height: 50px;
         border-radius: 20px;
         background-color: #431601;
+        cursor: pointer;
 
         .cartHeading{
             .cartIcon{
