--- a/src/components/UI/Button/Button.scss
+++ b/src/components/UI/Button/Button.scss
@@ -2,10 +2,10 @@ button{
     background-color: #a23d19;
     border: none;
     color: white;
-    font-size: larger;
+    font-size: 16px;
     border-radius: 5px;
-    width: 51px;
-    padding: 1px 15px;
-    margin: 10px 10px 10px 0px;
+    width: 115px;
+    padding: 3px 15px;
+    margin-top: 10px;
     cursor: pointer;
 }
